# easy_conference

./: CMakeLists.txt  README.md
client/: main.cpp
client/include/: client.h
client/src/: client.cpp
dependencies/: CMakeLists.txt
examples/client/: client_exec.cpp
examples/server/: server_exec.cpp
include/chat/: client.h  server.h
include/primitives/: common_json.h  message.h  user_interaction.h
primitives/: message.h
primitives/include/: deserialize_tools.h  message.h  serialize_tools.h  user_interaction.h
primitives/src/: common_json.cpp  deserialize_tools.cpp  serialize_tools.cpp  user_interaction.cpp
server/: main.cpp
server/include/: server.h
server/src/: server.cpp
src/chat/: client.cpp  server.cpp
src/primitives/: common_json.cpp
